# dexcom-to-calendar

./: .gitignore  Procfile  README.md  docker-compose.yml  put_bg_to_calendar.py  pyproject.toml  worker.py
config/: __init__.py  worker_supervisor.conf  xandikos.ini
docker/: Dockerfile  start_worker.sh
services/: caldav_client.py  dexcom.py
utils/: create_ical.py  setup_logger.py
